RESOLVED FIXED231968
Fix build break after r284406 if ENABLE_SERVICE_WORKER=OFF
https://bugs.webkit.org/show_bug.cgi?id=231968
Summary Fix build break after r284406 if ENABLE_SERVICE_WORKER=OFF
Jigen Zhou
Reported 2021-10-19 11:16:55 PDT
After r284406, build with ENABLE_SERVICE_WORKER=OFF generates errors: C:/work/webkit/jenkins/neko/Source/WebKit/UIProcess/WebPageProxy.h:1973:47: error: use of undeclared identifier 'm_isServiceWorkerPage'; did you mean 'isServiceWorkerPage'? bool isServiceWorkerPage() const { return m_isServiceWorkerPage; } ^~~~~~~~~~~~~~~~~~~~~ isServiceWorkerPage C:/work/webkit/jenkins/neko/Source/WebKit/UIProcess/WebPageProxy.h:1973:10: note: 'isServiceWorkerPage' declared here bool isServiceWorkerPage() const { return m_isServiceWorkerPage; } ^ C:/work/webkit/jenkins/neko/Source/WebKit/UIProcess/WebPageProxy.h:1973:47: error: reference to non-static member function must be called; did you mean to call it with no arguments? bool isServiceWorkerPage() const { return m_isServiceWorkerPage; } ^~~~~~~~~~~~~~~~~~~~~ () 2 errors generated.
Attachments
Patch (2.68 KB, patch)
2021-10-19 13:25 PDT, Jigen Zhou
no flags
Jigen Zhou
Comment 1 2021-10-19 13:25:52 PDT
EWS
Comment 2 2021-10-19 21:49:36 PDT
Committed r284517 (243260@main): <https://commits.webkit.org/243260@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441782 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-19 21:50:20 PDT
Note You need to log in before you can comment on or make changes to this bug.