Fix build break after r284406 if ENABLE_SERVICE_WORKER=OFF https://bugs.webkit.org/show_bug.cgi?id=231968

Patch by Jigen Zhou <jigen.zhou@sony.com> on 2021-10-19
Reviewed by Don Olmstead.

r284406 made m_isServiceWorkerPage of WebPageProxy not available if !ENABLE(SERVICE_WORKER),
but the change was incomplete and can cause build failure if ENABLE_SERVICE_WORKER=OFF.
This patch avoids accessing m_isServiceWorkerPage if !ENABLE(SERVICE_WORKER) in WebPageProxy
methods isServiceWorkerPage, loadDataWithNavigationShared, and resetStateAfterProcessExited.

* UIProcess/WebPageProxy.cpp:
* UIProcess/WebPageProxy.h:

Canonical link: https://commits.webkit.org/243260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284517 268f45cc-cd09-0410-ab3c-d52691b4dbfc